<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sai.weatherio.main.MainActivity"
    android:id="@+id/main_coordinator_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include layout="@layout/toolbar" />

            <android.support.v4.widget.SwipeRefreshLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/swipe_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/forecast_recycler_view"
                    android:layout_margin="16dp"/>
            </android.support.v4.widget.SwipeRefreshLayout>

            <RelativeLayout
                android:id="@+id/emptyLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="visible">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_launcher_round"
                    android:layout_above="@+id/empty_title_text_view"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/empty_icon_image_view"/>

                <TextView
                    android:id="@+id/empty_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/str_enter_location"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar_layout"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
